--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dhakashop
+name: craftybay
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,6 +35,7 @@ dependencies:
   get: ^4.6.6
   pin_code_fields: ^8.0.1
   carousel_slider: ^5.0.0
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
